[gd_scene load_steps=9 format=2]

[ext_resource path="res://Maps/Map3/Arena4.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Chao.png" type="Texture" id=2]
[ext_resource path="res://UI/Font2.tres" type="DynamicFont" id=3]
[ext_resource path="res://Enemy/Boss.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=5]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_bloom = 0.15
glow_blend_mode = 0
glow_bicubic_upscale = true
adjustment_enabled = true
adjustment_brightness = 0.8

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 178.5, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 165.5, 10 )

[node name="Arena4" type="Node2D"]
script = ExtResource( 1 )

[node name="Chao" type="Sprite" parent="."]
position = Vector2( 675, 526 )
scale = Vector2( 0.898889, 0.603889 )
texture = ExtResource( 2 )

[node name="Chao2" type="Sprite" parent="."]
position = Vector2( 689, -170.625 )
scale = Vector2( 0.367222, 1.14528 )
texture = ExtResource( 2 )

[node name="Chao3" type="Sprite" parent="."]
position = Vector2( 707, -1377 )
scale = Vector2( 2.8, 2.30667 )
texture = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 614, 488 )

[node name="ArenaTimer" type="Timer" parent="."]
wait_time = 60.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.356863 )

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.5
margin_top = -160.0
margin_right = 35.5
margin_bottom = -102.0
custom_fonts/font = ExtResource( 3 )
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -35.5
margin_right = 35.5
margin_bottom = 58.0
custom_fonts/font = ExtResource( 3 )
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossArea" type="Area2D" parent="."]
position = Vector2( 518, -353 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossArea"]
position = Vector2( 175, -26 )
shape = SubResource( 2 )

[node name="Paredes" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Paredes"]
polygon = PoolVector2Array( 1967, -2415, -553, -2415, -550, -343, 522, -339, 524, 254, 270, 254, 271, 797, 1080, 797, 1079, 255, 855, 255, 854, -339, 1968, -340, 1967, -2415, 1999, -2435, 2451, -2407, 2505, 948, -1007, 1100, -844, -2685, 2125, -2728 )

[node name="BossDoor" type="StaticBody2D" parent="."]
position = Vector2( 109, -229 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossDoor"]
position = Vector2( 155, 0 )
shape = SubResource( 3 )

[node name="DoorPos" type="Position2D" parent="."]
position = Vector2( 533, -329 )

[node name="Boss" parent="." instance=ExtResource( 4 )]
position = Vector2( 679, -1330 )

[connection signal="body_entered" from="BossArea" to="." method="_on_BossArea_body_entered"]
